--- a/students.html
+++ b/students.html
@@ -287,15 +287,23 @@
 </div>
 
 <div id="resourcesPop" class="pop" style="text-align:left;">
-  <p id="studentPin" style="margin-top:5px"></p>
+  <p id="studentPin" style="margin-top:5px;text-align:center;color:white"></p>
+  <p>Text "JOIN" to <a href="sms:8445688420?&body=JOIN">844-568-8420</a> to receive weekly update links by text</p>
+  <p>Email "JOIN" to <a href="mailto:jonathan@ksgrade2.com?subject=JOIN&body=JOIN">jonathan@ksgrade2.com</a> to receive weekly updates by email</p>
+  <p><a target="_blank" href="https://www.facebook.com/groups/ksgrade2">Join our class's private Facebook page</a></p>
+  <p><a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy">View lesson and memory verse videos</a></p>
   <p><a target="_blank" href="docs/handbook.pdf">Download class handbook</a></p>
   <p><a target="_blank" href="docs/calendar.pdf">Download printable calendar</a></p>
   <p><a target="_blank" href="docs/ranks.pdf">Download printable rank chart</a></p>
-  <p>Text "JOIN" to <a href="sms:8445688420?&body=JOIN">844-568-8420</a> to receive weekly update links by text</p>
-  <p>Email "JOIN" to <a href="mailto:jonathan@ksgrade2.com?subject=JOIN&body=JOIN">jonathan@ksgrade2.com</a> to receive weekly updates by email</p>
-  <div id="socialMediaFlexDiv" style="border-top:1px solid #555;padding-top:5px;margin-top:40px">
+  <div id="socialMediaFlexDiv" style="margin-top:20px">
     <a target="_blank" href="https://www.facebook.com/groups/ksgrade2"><div id="fbLink" class="ptr"></div></a>
     <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy"><div id="ytLink" class="ptr"></div></a>
+  </div>
+  <p style="text-align:center;margin-top:20px;border-top:1px solid #555;padding-top:20px;color:white">Contact Mr. Mulkey</p>
+  <div class="navigationButtonContainer" style="margin-top:10px;">
+    <a href="tel:8645694879"><div class="contactButton">x</div></a>
+    <a href="sms:8645694879"><div class="contactButton">d</div></a>
+    <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton">v</div></a>
   </div>
 </div>
 
