--- a/index.html
+++ b/index.html
@@ -19,23 +19,11 @@
 
         <div class="nav">
         
-            <a href="class/students.html">
+            <a href="students.html">
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper promotion-icon"></div>
                     <div class="nav-icon-text-wrapper">Student Progress</div>
                 </div></a>
-
-            <!-- <a href="docs/missions/29-shield-eph-6-16.pdf">
-                <div class="nav-icon-wrapper">
-                    <div class="nav-icon-img-wrapper newest-icon"></div>
-                    <div class="nav-icon-text-wrapper">Newest Mission</div>
-                </div></a>
-
-            <a href="archives.html">
-                <div class="nav-icon-wrapper">
-                    <div class="nav-icon-img-wrapper archives-icon"></div>
-                    <div class="nav-icon-text-wrapper">Archives</div>
-                </div></a> -->
             
             <a href="docs/handbook.pdf">
                 <div class="nav-icon-wrapper">
@@ -60,12 +48,6 @@
                     <div class="nav-icon-img-wrapper youtube-icon"></div>
                     <div class="nav-icon-text-wrapper">YouTube Channel</div>
                 </div></a>
-
-            <!-- <a href="mailto:jonathan@ksgrade2.com">
-                <div class="nav-icon-wrapper">
-                    <div class="nav-icon-img-wrapper contact-icon"></div>
-                    <div class="nav-icon-text-wrapper">Contact</div>
-                </div></a>     -->
 
         </div>
 
