--- a/students.html
+++ b/students.html
@@ -299,7 +299,8 @@
     <a target="_blank" href="https://www.facebook.com/groups/ksgrade2"><div id="fbLink" class="ptr"></div></a>
     <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy"><div id="ytLink" class="ptr"></div></a>
   </div>
-  <p style="text-align:center;margin-top:20px;border-top:1px solid #555;padding-top:20px;color:white">Contact Mr. Mulkey</p>
+  <p style="text-align:center;margin-top:20px;border-top:1px solid #555;padding-top:20px;color:white">Click the QR code to add Mr. Mulkey's contact info to your address book or use the buttons to call, text, or email</p>
+  <div id="contactQR"></div>
   <div class="navigationButtonContainer" style="margin-top:10px;">
     <a href="tel:8645694879"><div class="contactButton">x</div></a>
     <a href="sms:8645694879"><div class="contactButton">d</div></a>
