--- a/class/index.html
+++ b/class/index.html
@@ -85,6 +85,7 @@
   <div id="randButton" class="button ptr" onclick="pop(['mainMenuPop'],['randPop'])">Random</div>
   <div id="teamsButton" class="button ptr" onclick="teams()">Teams</div>
   <div class="button ptr" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
+  <div class="button ptr" id="handoutsButton" onclick="pop(['mainMenuPop'],['handoutsPop']);">Handouts</div>
 </div>
 
 <div id="pwdPop" class="pop">
@@ -98,17 +99,55 @@
   </div>
 </div>
 
+<div id="handoutsPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['handoutsPop'],['mainMenuPop'])">f</div>
+    <div class="homeButton ptr" onclick="goHome()">5</div>
+  </div>
+  <div id="editHandoutsButton" class="button ptr" onclick="pop(['handoutsPop'],['editHandoutsPop'])">Edit Handouts</div>
+  <div id="assignHandoutsButton" class="button ptr" onclick="pop(['handoutsPop'],['assignHandoutsPop']); populateAssignHandoutButtons()">Assign Handouts</div>
+</div>
+
+<div id="editHandoutsPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['editHandoutsPop'],['handoutsPop'])">f</div>
+    <div class="homeButton ptr" onclick="goHome()">5</div>
+  </div>
+  <textarea id="editHandoutsTF" rows="10" cols="30" placeholder="No handouts added yet" onkeydown="pressKey(13,'editHandoutsOK')"></textarea>
+  <div class="optionButtonContainer">
+    <div class="roundButton1 cancelButton ptr" id="editHandoutsCancel" onclick="pop(['editHandoutsPop'],['handoutsPop'])">X</div>
+    <div class="roundButton1 okButton ptr" id="editHandoutsOK" onclick="editHandouts();pop(['editHandoutsPop'],['handoutsPop'])">V</div>
+  </div>
+</div>
+
+<div id="assignHandoutsPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['assignHandoutsPop'],['handoutsPop'])">f</div>
+    <div class="homeButton ptr" onclick="goHome()">5</div>
+  </div>
+  <div id="assignHandoutsButtonContainer"></div>
+</div>
+
 <div id="alertsPop" class="pop">
-      <div class="buttonArr">
-          <div class="navigationButtonContainer">
-            <div class="backButton ptr" onclick="goHome()">f</div>
-          </div>
-          <div class="button ptr" id="promoButton" onclick="loadPromos(); pop(['alertsPop'],['customListPop'])">Promotions</div>
-          <div class="button ptr" id="bdButton" onclick="loadBds(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
-          <div class="button ptr" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
-          <div class="button ptr" id="emailsNeededButton" onclick="loadNeededEmails(); pop(['alertsPop'],['customListPop']); _array = ['customListPop']">Missing Emails</div>
-          <div class="button ptr" id="bdNeededButton" onclick="loadNeededBds(); pop(['alertsPop'],['customListPop']); _array = ['customListPop']">Missing Birthdays</div>
-      </div>
+    <div class="navigationButtonContainer">
+      <div class="backButton ptr" onclick="goHome()">f</div>
+    </div>
+    <div class="buttonArr">
+        <div class="button ptr" id="promoButton" onclick="loadPromos(); pop(['alertsPop'],['customListPop'])">Promotions</div>
+        <div class="button ptr" id="bdButton" onclick="loadBds(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
+        <div class="button ptr" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
+        <div class="button ptr" id="emailsNeededButton" onclick="loadNeededEmails(); pop(['alertsPop'],['customListPop'])">Missing Emails</div>
+        <div class="button ptr" id="bdNeededButton" onclick="loadNeededBds(); pop(['alertsPop'],['customListPop'])">Missing Birthdays</div>
+        <div class="button ptr" id="handoutsNeededButton" onclick="pop(['alertsPop'],['handoutsAlertPop'])">Missing Handouts</div>
+    </div>
+</div>
+
+<div id="handoutsAlertPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['handoutsAlertPop'],['alertsPop'])">f</div>
+    <div class="homeButton ptr" onclick="goHome()">5</div>
+  </div>
+  <div class="buttonArr" id="missingHandoutButtongArr"></div>
 </div>
 
 <div id="teamsListPop" class="pop">
@@ -403,7 +442,7 @@
       <input class="searchField" id="editNamePron" placeholder="name pronunciation" onkeydown="pressKey(13,'editStudentOkButton')"></textarea>
     </div>
     <div class="optionButtonContainer">
-      <div class="roundButton1 cancelButton ptr" id="editStudentCancelButton" onclick="pop(['editStudentPop'],[_array]); clearStudentFields(); resetStudentMenu(); rapidOff()">X</div>
+      <div class="roundButton1 cancelButton ptr" id="editStudentCancelButton" onclick="pop(['editStudentPop'],[_array]); _array = ['alertsPop']; clearStudentFields(); resetStudentMenu(); rapidOff()">X</div>
       <div class="roundButton1 deleteButton ptr" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
       <div class="roundButton1 okButton ptr" id="editStudentOkButton" onclick="editStudent()">V</div>
     </div>
@@ -635,7 +674,7 @@
 
 <div id="customListPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['customListPop'],['alertsPop'])">f</div>
+    <div class="backButton ptr" onclick="pop(['customListPop'],[_array])">f</div>
     <div class="homeButton ptr" onclick="goHome()">5</div>
   </div>
   <div id="customListLabel"></div>
@@ -674,9 +713,11 @@
     <div id="slBackupArray"></div>
     <div id="attBackupArray"></div>
     <div id="teacherNotesBackupArray"></div>
+    <div id="handoutsBackupArray"></div>
     <div id="setItem1"></div>
     <div id="setItem2"></div>
     <div id="setItem3"></div>
+    <div id="setItem4"></div>
   </div>
 </div>
 
