--- a/students.html
+++ b/students.html
@@ -311,7 +311,7 @@
 <div id="alertPop" class="pop">
   <p id="alertTitle">I</p>
   <p id="alertMssg" style="font-size:25px"><span class="do">Reminder:</span><br>No Kidstuff next week (9/4). We'll see you back again on 9/11.</p>
-  <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','missionsPop'])">OK</div>
+  <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
 </div>
 
 </div>
