--- a/class/index.html
+++ b/class/index.html
@@ -34,7 +34,7 @@
   <div class="navigationButtonContainer" style="margin-bottom:0px">
     <div class="backButton ptr" onclick="teamsListPop()">f</div>
   </div>
-  <input id="searchMain3" class="searchField2" type="text" placeholder="search names" oninput="searchNames('searchMain3','nameSmaller')"/>
+  <input id="searchMain3" class="searchField2" type="text" placeholder="search names" oninput="searchNames('searchMain3','name')"/>
   <div id="nameList3"></div>
 </div>
 
