--- a/students.html
+++ b/students.html
@@ -17,6 +17,12 @@
     <div id="submitButton" class="ptr" onclick="findStudent()">S</div>
   </div>
   <p style="color:#ddd;border-top:1px solid #555;padding-top:20px">Your child's 3-digit PIN can be found under the RESOURCES tab on their info page that loads after you search for them by name</p>
+  <a target="_blank" href=""><div class="watchContainer" style="margin-top:40px">
+    <div class="fillerDiv"></div>
+    <div class="watchIcon"></div>
+    <div class="watchText">Watch Tutorial</div>
+    <div class="fillerDiv"></div>
+  </div></a>
   <p class="note" style="margin-top:40px;">Use the contact buttons below for help</p>
   <div class="navigationButtonContainer" style="margin-top:35px;">
     <a href="tel:8645694879"><div class="contactButton">x</div></a>
