--- a/students.html
+++ b/students.html
@@ -18,7 +18,7 @@
   </div>
   <p style="color:#FFE599">Database last updated: n/a</p>
   <p style="color:#ddd;border-top:1px solid #555;padding-top:20px">Your child's 3-digit PIN can be found under the RESOURCES tab on their info page that loads after you search for them by name</p>
-  <a target="_blank" href="https://www.youtube.com/watch?v=XyX0eBWA6Ls"><div class="watchContainer" style="margin-top:40px">
+  <a target="_blank" href="https://youtu.be/gLHxIObwm0I"><div class="watchContainer" style="margin-top:40px">
     <div class="fillerDiv"></div>
     <div class="watchIcon"></div>
     <div class="watchText">Watch Tutorial</div>
