--- a/students.html
+++ b/students.html
@@ -101,7 +101,7 @@
     <table id="participationTable" class="progressBarTable"></table>
   </div>
 
-  <div id="lbDiv">
+  <div id="lbDiv" style="display:none">
     <p id="leaderBoardsHeader">Leader Boards</p>
     <div class="lb" id="totalPtsLb">
       <p class="lbTitle">Total Points</p>
