--- a/students.html
+++ b/students.html
@@ -76,17 +76,17 @@
     <table id="rankProgressTable" class="progressBarTable"></table>
   </div>
 
-  <div id="tpTableDiv" class="ptr" onclick="pop(['studentStatsPop'],['tpPop'])">
+  <div id="tpTableDiv" class="ptr"> <!-- onclick="pop(['studentStatsPop'],['tpPop'])" -->
     <p id="tpTableP"></p>
     <table id="tpTable" class="progressBarTable"></table>
   </div>
 
-  <div id="asProgressTableDiv" class="ptr" onclick="pop(['studentStatsPop'],['asPointsPop'])">
+  <div id="asProgressTableDiv" class="ptr"> <!-- onclick="pop(['studentStatsPop'],['asPointsPop'])" -->
     <p id="asProgressTableP"></p>
     <table id="asProgressTable" class="progressBarTable"></table>
   </div>
 
-  <div id="mvProgressTableDiv" class="ptr" onclick="pop(['studentStatsPop'],['mvPointsPop'])">
+  <div id="mvProgressTableDiv" class="ptr"> <!-- onclick="pop(['studentStatsPop'],['mvPointsPop'])" -->
     <p id="mvProgressTableP"></p>
     <table id="mvProgressTable" class="progressBarTable"> </table>
   </div>
@@ -96,7 +96,7 @@
     <table id="attProgressTable" class="progressBarTable"></table>
   </div>
 
-  <div id="participationTableDiv" class="ptr" onclick="pop(['studentStatsPop'],['participationPop'])">
+  <div id="participationTableDiv" class="ptr"> <!-- onclick="pop(['studentStatsPop'],['participationPop'])" -->
     <p id="participationTableP"></p>
     <table id="participationTable" class="progressBarTable"></table>
   </div>
