--- a/class/index.html
+++ b/class/index.html
@@ -549,6 +549,9 @@
 </div>
 
 <div id="asPtsPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['asPtsPop'],['missionsPop'])"><span>f</span></div>
+  </div>
   <div class="pointButtonContainer">
       <div id="as1Pts" class="roundButton1 numberButton asPts ptr" onclick="asPts(_asNum,1)">1</div>
       <div id="as2Pts" class="roundButton1 numberButton asPts ptr" onclick="asPts(_asNum,2)">2</div>
@@ -586,6 +589,9 @@
 </div>
 
 <div id="mvPtsPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['mvPtsPop'],['missionsPop'])"><span>f</span></div>
+  </div>
   <div class="pointButtonContainer">
       <div id="mv1Pts" class="roundButton1 numberButton mvPts ptr" onclick="mvPts(_mvNum,1)">1</div>
       <div id="mv2Pts" class="roundButton1 numberButton mvPts ptr" onclick="mvPts(_mvNum,2)">2</div>
@@ -725,6 +731,9 @@
 </div>
 
 <div id="rankChartPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['rankChartPop'],['studentStatsPop'])"><span>f</span></div>
+  </div>
   <div id = "rankChartContainer">
   <table id="rankChartTable">
     <tr class="tableHeaderRow">
@@ -797,6 +806,9 @@
 </div>
 
 <div id="studentAttStatsPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['studentAttStatsPop'],['studentStatsPop'])"><span>f</span></div>
+  </div>
   <div id="studentAttTableDiv">
     <table id="studentAttTable">
       <tr class="tableHeaderRow">
