--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a target="_blank" href="https://youtube.com/playlist?list=PL7iQZDmvw8GHXTnAoOT0UNS38yCKIqwRy">
                 <div class="nav-icon-wrapper">
                     <div class="nav-icon-img-wrapper youtube-icon"></div>
-                    <div class="nav-icon-text-wrapper">YouTube Channel</div>
+                    <div class="nav-icon-text-wrapper">YouTube Playlist</div>
                 </div></a>
 
         </div>
