--- a/students.html
+++ b/students.html
@@ -317,7 +317,7 @@
 
 <div id="alertPop" class="pop">
   <p id="alertTitle">I</p>
-  <p id="alertMssg" style="font-size:25px"><span class="do">Reminder:</span><br>No Kidstuff next week (9/4). We'll see you back again on 9/11.</p>
+  <p id="alertMssg" style="font-size:25px"><span class="do">Reminder:</span><br>Next Sunday, September 4, is a "Family Worship Sunday", which means Kidstuff and Treehouse will not meet.  We look forward to seeing you all back in the Kidstuff hallways on September 11!</p>
   <div class="okButton ptr" style="margin-top:50px" onclick="loadStudent(_ci);pop(['alertPop'],['studentPop','studentStatsPop'])">OK</div>
 </div>
 
