--- a/students.html
+++ b/students.html
@@ -101,32 +101,35 @@
     <table id="participationTable" class="progressBarTable"></table>
   </div>
 
-  <div id="lbDiv" style="display:none">
+  <div id="lbDiv">
     <p id="leaderBoardsHeader">Leader Boards</p>
-    <div class="lb" id="totalPtsLb">
-      <p class="lbTitle">Total Points</p>
-      <div id="totalPtsLbList"></div>
-    </div>
+    <p id="lbMssg" style="color:#ddd;text-align:center;"></p>
+    <div id="lbContainer">
+      <div class="lb" id="totalPtsLb">
+        <p class="lbTitle">Total Points</p>
+        <div id="totalPtsLbList"></div>
+      </div>
 
-    <div class="lb" id="asPtsLb">
-      <p class="lbTitle">Activity Sheet Points</p>
-      <div id="asPtsLbList"></div>
-    </div>
+      <div class="lb" id="asPtsLb">
+        <p class="lbTitle">Activity Sheet Points</p>
+        <div id="asPtsLbList"></div>
+      </div>
 
-    <div class="lb" id="mvPtsLb">
-      <p class="lbTitle">Memory Verse Points</p>
-      <div id="mvPtsLbList"></div>
-    </div>
+      <div class="lb" id="mvPtsLb">
+        <p class="lbTitle">Memory Verse Points</p>
+        <div id="mvPtsLbList"></div>
+      </div>
 
-    <div class="lb" id="attLb">
-      <p class="lbTitle">Attendance</p>
-      <div id="attLbList"></div>
-    </div>
+      <div class="lb" id="attLb">
+        <p class="lbTitle">Attendance</p>
+        <div id="attLbList"></div>
+      </div>
 
-    <div class="lb" id="tpLb">
-      <p class="lbTitle">Participation</p>
-      <div id="tpLbList"></div>
-    </div>
+      <div class="lb" id="tpLb">
+        <p class="lbTitle">Participation</p>
+        <div id="tpLbList"></div>
+      </div>
+   </div>
 
   </div>
 
