--- a/sms.html
+++ b/sms.html
@@ -11,15 +11,13 @@
 <div class="master-wrapper">
 
 <div class="pop" style="margin-top:50px">
-  <p style="font-size:30px"><a href="sms:18643023502?&body=JOIN">Text "JOIN" to 864-302-3502</a> to receive weekly update links by text</p>
+  <p style="font-size:25px">Text "JOIN" to 864-302-3502 to receive weekly update links by text by simply clicking the icon below and then clicking Send in your messaging app</p>
 </div>
 
 <div>
-  <a href="sms:18643023502?&body=JOIN" style="text-decoration:none"><div class="contactButton" style="font-size:150px;">d</div></a>
+  <a href="sms:18643023502?&body=JOIN" style="text-decoration:none"><div class="contactButton" style="font-size:150px;color:#5BF676">d</div></a>
 </div>
 
 </div>
-<script src="class/backup.js"></script>
-<script src="class/students.js"></script>
 </body>
 </html>
