--- a/sms.html
+++ b/sms.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="class/students.css"/>
     <link rel=”shortcut icon” href =“favicon.ico”>
-    <title>students</title>
+    <title>sms</title>
 </head>
 <body>
 <div class="master-wrapper">
 
 <div class="pop" style="margin-top:50px">
-  <p style="font-size:25px">Text "JOIN" to 864-302-3502 to receive weekly update links by text by simply clicking the icon below and then clicking Send in your messaging app</p>
+  <p style="font-size:25px">Text "JOIN" to 864-302-3502 to receive weekly update links by text by simply clicking the icon below</p>
 </div>
 
 <div>
