--- a/class/index.html
+++ b/class/index.html
@@ -290,7 +290,7 @@
   </div>
 </div>
 
-<div id="studentStatsPop" class="pop">
+<div id="studentStatsPop" class="pop" style="padding-top:0px">
 
     <div id="rankProgressTableDiv" class="ptr" onclick="loadRankTable()">
       <p id="rankProgressTableP" style="margin-top:0px"></p>
@@ -401,8 +401,9 @@
   </div>
 </div>
 
-<div id="editStudentPop" class="pop">
+<div id="editStudentPop" class="pop" style="padding-top:0px">
   <div>
+    <div id="dispStudentPhoto" class="ptr" style="margin-bottom:20px" onclick="photoLinks()"></div>
     <div class="genderAndBdContainer">
       <div>
         <p style="margin-top:0px">First Name</p>
@@ -446,7 +447,6 @@
       <div class="roundButton1 deleteButton ptr" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
       <div class="roundButton1 okButton ptr" id="editStudentOkButton" onclick="editStudent()">V</div>
     </div>
-    <div id="dispStudentPhoto" class="ptr" onclick="photoLinks()"></div>
   </div>
 </div>
 
