--- a/class/index.html
+++ b/class/index.html
@@ -14,6 +14,7 @@
     <div id="topMenuContainer">
         <div id="mainMenuButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['mainMenuPop'])">H</div>
         <div id="alertButton" class="roundButton2 ptr" onclick="alertsPop()">#</div>
+        <div id="allergiesButton" class="roundButton2 ptr" style="padding-top:6px" onclick="allergiesPop()">A</div>
         <div id="attCountButton" class="roundButton2 ptr" onclick="loadAttendees()">0</div>
         <div id="logButton" class="roundButton2 ptr" onclick="logPop()">F</div>
         <div id="backupButton" class="roundButton2 ptr" onclick="populateBackup()">B</div>
@@ -74,6 +75,14 @@
   </div>
 </div>
 
+<div id="allergiesPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="goHome()"">f</div>
+  </div>
+  <p id="allergiesLabel">Allergies</p>
+  <div id="allergiesList"></div>
+</div>
+
 <div id="mainMenuPop" class="pop">
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="goHome()">f</div>
@@ -84,8 +93,8 @@
   <div id="drawButton" class="button ptr" onclick="clearDrawingWinner(); pop(['mainMenuPop'],['drawPop'])">Drawing</div>
   <div id="randButton" class="button ptr" onclick="pop(['mainMenuPop'],['randPop'])">Random</div>
   <div id="teamsButton" class="button ptr" onclick="teams()">Teams</div>
-  <div class="button ptr" id="teacherNotesButton" onclick="pop(['mainMenuPop'],['teacherNotesPop']); populateTeacherNotes()">Notes</div>
   <div class="button ptr" id="handoutsButton" onclick="pop(['mainMenuPop'],['handoutsPop']);">Handouts</div>
+  <div class="button ptr" id="shufflePhotosButton" onclick="shufflePhotosPop()">Shuffle Photos</div>
 </div>
 
 <div id="pwdPop" class="pop">
@@ -133,6 +142,7 @@
       <div class="backButton ptr" onclick="goHome()">f</div>
     </div>
     <div class="buttonArr">
+        <div class="button ptr" id="remindersButton" onclick="pop(['alertsPop'],['remindersPop']); populateReminders()">Reminders</div>
         <div class="button ptr" id="promoButton" onclick="loadPromos(); pop(['alertsPop'],['customListPop'])">Promotions</div>
         <div class="button ptr" id="bdButton" onclick="loadBds(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
         <div class="button ptr" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
@@ -392,6 +402,10 @@
     <input class="searchField" id="newNamePron" placeholder="name pronunciation" onkeydown="pressKey(13,'newStudentOkButton')"></textarea>
   </div>
   <div>
+    <p>Allergies</p>
+    <input class="searchField" id="newAllergies" placeholder="allergies" onkeydown="pressKey(13,'newStudentOkButton')"></textarea>
+  </div>
+  <div>
     <p>Note</p>
     <textarea id="initialNote" rows="10" cols="30" placeholder="note" onkeydown="pressKey(13,'newStudentOkButton')"></textarea>
   </div>
@@ -403,7 +417,7 @@
 
 <div id="editStudentPop" class="pop" style="padding-top:0px">
   <div>
-    <div id="dispStudentPhoto" class="ptr" style="margin-bottom:20px" onclick="photoLinks()"></div>
+    <div id="dispStudentPhoto" class="dispStudentPhoto ptr" style="margin-bottom:20px" onclick="photoLinks()"></div>
     <div class="genderAndBdContainer">
       <div>
         <p style="margin-top:0px">First Name</p>
@@ -442,6 +456,10 @@
       <p>Name Pronunciation</p>
       <input class="searchField" id="editNamePron" placeholder="name pronunciation" onkeydown="pressKey(13,'editStudentOkButton')"></textarea>
     </div>
+    <div>
+      <p>Allergies</p>
+      <input class="searchField" id="editAllergies" placeholder="allergies" onkeydown="pressKey(13,'editStudentOkButton')"></textarea>
+    </div>
     <div class="optionButtonContainer">
       <div class="roundButton1 cancelButton ptr" id="editStudentCancelButton" onclick="editStudentPop(); clearStudentFields(); resetStudentMenu(); rapidOff()">X</div>
       <div class="roundButton1 deleteButton ptr" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
@@ -450,59 +468,58 @@
   </div>
 </div>
 
-<div id="studentNotesPop" class="pop" style="padding-top:0px">
-  <p id="studentNotesHeader" class="notesListHeader"></p>
-  <div id="studentNotesList">
+<div id="notesPop" class="pop" style="padding-top:0px">
+  <div id="notesList">
   </div>
 </div>
 
-<div id="teacherNotesPop" class="pop">
+<div id="remindersPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['teacherNotesPop','editTeacherNotePop'],['mainMenuPop'])">f</div>
+    <div class="backButton ptr" onclick="pop(['remindersPop','editReminderPop'],['alertsPop'])">f</div>
     <div class="homeButton ptr" onclick="goHome()">5</div>
   </div>
-  <div id="teacherNotesList"></div>
+  <div id="remindersList"></div>
 </div>
 
-<div id="addStudentNotePop" class="pop">
-  <textarea id="addStudentNote" rows="10" cols="30" onkeydown="pressKey(13,'addStudentNoteOk'); pressKey(27,'addStudentNoteCancel')" placeholder="Add New Note"></textarea>
+<div id="addNotePop" class="pop">
+  <textarea id="addNote" rows="10" cols="30" onkeydown="pressKey(13,'addNoteOk'); pressKey(27,'addNoteCancel')" placeholder="Add New Note"></textarea>
   <div class="optionButtonContainer">
-    <div class="roundButton1 cancelButton ptr" id="addStudentNoteCancel" onclick="pop(['addStudentNotePop'],['studentNotesPop','studentNotesList'])">X</div>
-    <div class="roundButton1 okButton ptr" id="addStudentNoteOk" onclick="addStudentNote()">V</div>
+    <div class="roundButton1 cancelButton ptr" id="addNoteCancel" onclick="pop(['addNotePop'],['notesPop','notesList'])">X</div>
+    <div class="roundButton1 okButton ptr" id="addNoteOk" onclick="addNote()">V</div>
   </div>
 </div>
 
-<div id="addTeacherNotePop" class="pop">
+<div id="addReminderPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['addTeacherNotePop','addTeacherNote'],['teacherNotesPop','teacherNotesList'])">f</div>
+    <div class="backButton ptr" onclick="pop(['addReminderPop','addReminder'],['remindersPop','remindersList'])">f</div>
     <div class="homeButton ptr" onclick="goHome()">5</div>
   </div>
-  <textarea id="addTeacherNote" rows="10" cols="30" onkeydown="pressKey(13,'addTeacherNoteOk'); pressKey(27,'addTeacherNoteCancel')" placeholder="Add New Note"></textarea>
+  <textarea id="addReminder" rows="10" cols="30" onkeydown="pressKey(13,'addReminderOk'); pressKey(27,'addReminderCancel')" placeholder="Add New Note"></textarea>
   <div class="optionButtonContainer">
-    <div class="roundButton1 cancelButton ptr" id="addTeacherNoteCancel" onclick="pop(['addTeacherNotePop','addTeacherNote'],['teacherNotesPop','teacherNotesList'])">X</div>
-    <div class="roundButton1 okButton ptr" id="addTeacherNoteOk" onclick="addTeacherNote()">V</div>
+    <div class="roundButton1 cancelButton ptr" id="addReminderCancel" onclick="pop(['addReminderPop','addReminder'],['remindersPop','remindersList'])">X</div>
+    <div class="roundButton1 okButton ptr" id="addReminderOk" onclick="addReminder()">V</div>
   </div>
 </div>
 
-<div id="editStudentNotePop" class="pop">
-  <textarea id="editStudentNote" rows="10" cols="30" onkeydown="pressKey(13,'editStudentNoteOk'); pressKey(27,'editStudentNoteCancel')"></textarea>
+<div id="editNotePop" class="pop">
+  <textarea id="editNote" rows="10" cols="30" onkeydown="pressKey(13,'editNoteOk'); pressKey(27,'editNoteCancel')"></textarea>
   <div class="optionButtonContainer">
-    <div class="roundButton1 cancelButton ptr" id="editStudentNoteCancel" onclick="pop(['editStudentNotePop','editStudentNote'],['studentNotesPop','studentNotesList'])">X</div>
-    <div class="roundButton1 deleteButton ptr" id="deleteNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editStudentNotePop'],deleteNote)">U</div>
-    <div class="roundButton1 okButton ptr" id="editStudentNoteOk" onclick="editStudentNote()">V</div>
+    <div class="roundButton1 cancelButton ptr" id="editNoteCancel" onclick="pop(['editNotePop','editNote'],['notesPop','notesList'])">X</div>
+    <div class="roundButton1 deleteButton ptr" id="deleteNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editNotePop'],deleteNote)">U</div>
+    <div class="roundButton1 okButton ptr" id="editNoteOk" onclick="editNote()">V</div>
   </div>
 </div>
 
-<div id="editTeacherNotePop" class="pop">
+<div id="editReminderPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['editTeacherNotePop','editTeacherNote'],['teacherNotesPop','teacherNotesList'])">f</div>
+    <div class="backButton ptr" onclick="pop(['editReminderPop','editReminder'],['remindersPop','remindersList'])">f</div>
     <div class="homeButton ptr" onclick="goHome()">5</div>
   </div>
-  <textarea id="editTeacherNote" rows="10" cols="30" onkeydown="pressKey(13,'editTeacherNoteOk'); pressKey(27,'editTeacherNoteCancel')"></textarea>
+  <textarea id="editReminder" rows="10" cols="30" onkeydown="pressKey(13,'editReminderOk'); pressKey(27,'editReminderCancel')"></textarea>
   <div class="optionButtonContainer">
-    <div class="roundButton1 cancelButton ptr" id="editTeacherNoteCancel" onclick="pop(['editTeacherNotePop','editTeacherNote'],['teacherNotesPop','teacherNotesList'])">X</div>
-    <div class="roundButton1 deleteButton ptr" id="deleteTeacherNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editTeacherNotePop'],deleteTeacherNote)">U</div>
-    <div class="roundButton1 okButton ptr" id="editTeacherNoteOk" onclick="editTeacherNote()">V</div>
+    <div class="roundButton1 cancelButton ptr" id="editReminderCancel" onclick="pop(['editReminderPop','editReminder'],['remindersPop','remindersList'])">X</div>
+    <div class="roundButton1 deleteButton ptr" id="deleteReminderButton" onclick="actionAlert('Are you sure you want to delete this reminder?',['editReminderPop'],deleteReminder)">U</div>
+    <div class="roundButton1 okButton ptr" id="editReminderOk" onclick="editReminder()">V</div>
   </div>
 </div>
 
@@ -698,6 +715,7 @@
     <p>bd: <span id="bd"></span><span id="bdnConverted"></span></p>
     <p>email: <span id="email"></span></p>
     <p>photo: <span id="photo"></span></p>
+    <p>allergies: <span id="allergies"></span></p>
     <p>notes: <span id="notes"></span></p>
     <p>pts: <span id="pts"></span></p>
     <p>gamePts: <span id="gamePts"></span></p>
@@ -721,7 +739,7 @@
   <div id="backupArrays" class="ptr" onclick="selectText('backupArrays')">
     <div id="slBackupArray"></div>
     <div id="attBackupArray"></div>
-    <div id="teacherNotesBackupArray"></div>
+    <div id="remindersBackupArray"></div>
     <div id="handoutsBackupArray"></div>
     <div id="setItem1"></div>
     <div id="setItem2"></div>
@@ -820,7 +838,13 @@
   </div>
 </div>
 
+<div id="shufflePhotosPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['shufflePhotosPop'],['mainMenuPop'])">f</div>
+  </div>
+  <div id="shuffledPhotos"></div>
 </div>
+
 <script src="backup.js"></script>
 <script src="main.js"></script>
 </body>
