--- a/class/index.html
+++ b/class/index.html
@@ -842,6 +842,7 @@
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="pop(['shufflePhotosPop'],['mainMenuPop'])">f</div>
   </div>
+  <label class="checkboxLabel"><input type="checkbox" id="togglePhotoTilesCheck" style="margin-bottom:30px" class="checkbox" onclick="togglePhotoTitles()"> Show all photo titles</label><br>
   <div id="shuffledPhotos"></div>
 </div>
 
