--- a/students.html
+++ b/students.html
@@ -102,7 +102,7 @@
   </div>
 
   <div id="lbDiv">
-    <p id="leaderBoardsHeader">Leader Boards</p>
+    <p id="lbHeader">Leader Boards</p>
     <p id="lbMssg" style="color:#ddd;text-align:center;"></p>
     <div id="lbContainer">
       <div class="lb" id="totalPtsLb">
